--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.1.0",
+    "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
