--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^7.1.2",
     "mongoose": "^8.1.1",
     "mongoose-paginate-v2": "^1.8.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
